[package]
name = "mountain_snail"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.40"
console = "0.16.0"
dialoguer = { version = "0.11.0", features = ["history"] }
geo-types = "0.7.16"
gpx = "0.10.0"
humanize-duration = "0.0.7"
indicatif = "0.17.12"
readable = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
vincenty-core = "1.0.0"
